# niimprint

./: LICENSE  README.md  pyproject.toml  readme.md  scan_ble_devices.py
niimprint/: __init__.py  __main__.py  printer.py
niimprint/transport/: __init__.py  base.py  ble.py  bluetooth.py  bluetooth_osx.py  serial.py
utils/: today.py
