[project]
name = "niimprint"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "pillow>=10.1.0",
    "click>=8.1.7",
    "pyobjc-framework-IOBluetooth>=10.0; sys_platform == 'darwin'",
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
